# FlightSim

./: CMakeLists.txt  ReadMe.md  readme
include/: camera.h  ground.h
include/imu/: cIMUCorrect.h  cIMUOdo.h  cIMUState.h
include/mrsid/: sid.h
include/shp/: shp.h
src/: CMakeLists.txt  camera.cc  ground.cc  main.cc  take_sat_img.cc
src/imu/: cIMUCorrect.cpp  cIMUOdo.cpp  cIMUState.cpp
src/mrsid/: sid.cc
src/shp/: shp.cc
src/test/: test_ground.cc  test_shp.cc  test_sid.cc
tools/: make_image_sequences.py
